Add initial styling

--- a/src/Components/App/App.sass
+++ b/src/Components/App/App.sass
@@ -3,7 +3,6 @@
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700')
 
-
 html
   font-family: "Nunito", sans-serif
   min-height: 100%
@@ -11,5 +10,20 @@ html
   align-items: center
   justify-content: center
 
+
+
 body
   font-family: "Nunito", sans-serif
+
+
+.App
+  position: relative
+  min-width: 365px
+  margin: 0 0 300px 0
+
+  .LoadingSpinner
+    position: absolute
+    display: flex
+    justify-content: center
+    width: 100%
+    top: 200px
