--- a/src/Components/App/SearchBox/SearchBox.sass
+++ b/src/Components/App/SearchBox/SearchBox.sass
@@ -2,3 +2,13 @@
   display: flex
   align-items: center
   justify-content: space-between
+
+  .SearchBox__Form
+    width: 100%
+    min-height: 75px
+    .SearchBox__Input-Control
+      flex: 1
+
+  .ErrorMessage
+    letter-spacing: 1px
+    text-align: center
