Move app container to top

--- a/src/Components/App/App.sass
+++ b/src/Components/App/App.sass
@@ -7,7 +7,7 @@ html
   font-family: "Nunito", sans-serif
   min-height: 100%
   display: flex
-  align-items: center
+  align-items: flex-start
   justify-content: center
 
 
@@ -19,7 +19,7 @@ body
 .App
   position: relative
   min-width: 365px
-  margin: 0 0 300px 0
+  margin: 100px 0 300px 0
 
   .LoadingSpinner
     position: absolute
