Adjust styling and add Etymologies to <LexicalEntry />

--- a/src/Components/App/SearchResults/Components/LexicalEntry/LexicalEntry.sass
+++ b/src/Components/App/SearchResults/Components/LexicalEntry/LexicalEntry.sass
@@ -1,8 +1,13 @@
 .LexicalEntry
+  h4, h5
+    display: inline-block
 
   .Dialects
     margin: 0 5px 0 0
 
   .LexicalCategory
     display: inline-block
-    margin: 0 0 5px 0
+    margin: 0 0 5px 5px
+
+  .Pronunciations
+    margin: 0 0 15px 0
