Adjust App layout

--- a/src/Components/App/App.sass
+++ b/src/Components/App/App.sass
@@ -10,15 +10,13 @@ html
   align-items: flex-start
   justify-content: center
 
-
-
 body
   font-family: "Nunito", sans-serif
-
 
 .App
   position: relative
   min-width: 490px
+  max-width: 490px
   margin: 100px 0 300px 0
 
   .LoadingSpinner
