Improve general styling

--- a/src/Components/App/SearchResults/Components/LexicalEntry/LexicalEntry.sass
+++ b/src/Components/App/SearchResults/Components/LexicalEntry/LexicalEntry.sass
@@ -27,7 +27,7 @@ body
   .Pronunciations
     margin: 0 0 15px 0
 
-  .Definition::before
+  .Sense::before
     counter-increment: definitionSection
-    content: counter(definitionSection)
+    content: counter(definitionSection) ". "
     font-weight: bolder
